--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
         <% end %>
         <ul class="account-btns">
           <li class="signup-popup">
-            <%= link_to "javascript:void(0)" do %>
+            <%= link_to new_account_path do %>
               <i class="fas fa-key"></i>
               <%= t ".signup" %>
             <% end %>
