--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
+    <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
   </head>
   <body>
+    <%= render partial: "layouts/header" %>
     <%= yield %>
-    <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
+    <%= render partial: "layouts/footer" %>
   </body>
 </html>
